[package]
name = "krator-derive"
version = "0.3.0"
authors = [
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Matt Butcher <matt.butcher@microsoft.com>",
]
edition = "2018"
license = "Apache-2.0"
description = "Derive macros for the Krator crate"
repository = "https://github.com/krator-rs/krator"
readme = "README.md"
keywords = ["kubernetes", "controller", "operator", "derive"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.24"

[features]
admission-webhook = []

[package.metadata.docs.rs]
features = ["docs", "admission-webhook"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[dev-dependencies]
kube-runtime = { version = "0.58", default-features = false }
kube-derive = "0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
schemars = "0.8.0"
anyhow = { version = "1.0.40" }
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
kube = { version = "0.58", default-features = false, features = ["derive"] }
rcgen = { version = "0.8.9", features = ["x509-parser", "pem"] }
