[package]
name = "krator"
version = "0.6.0"
authors = [
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Matt Butcher <matt.butcher@microsoft.com>",
]
edition = "2021"
license = "Apache-2.0"
description = "A Kubernetes operator implementation in Rust"
repository = "https://github.com/krator-rs/krator"
readme = "README.md"
keywords = ["kubernetes", "controller", "operator", "state_machine"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["kube-native-tls"]
kube-native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
derive = ["krator-derive"]
admission-webhook = ["warp", "json-patch", "serde_yaml"]
derive-admission-webhook = [
    "admission-webhook",
    "derive",
    "krator-derive/admission-webhook",
    "rcgen",
]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ['sync'] }
kube = { version = "0.66", default-features = false, features = ['client'] }
kube-runtime = { version = "0.66", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.8", optional = true }
futures = { version = "0.3", default-features = false }
krator-derive = { version = "0.5", path = "../krator-derive", optional = true }
warp = { version = "0.3", optional = true, features = ["tls"] }
json-patch = { version = "0.2", optional = true }
tracing = { version = "0.1", features = ['log'] }
tracing-futures = "0.2"
rcgen = { version = "0.8.9", features = ["x509-parser", "pem"], optional = true }

[dependencies.k8s-openapi]
version = "0.13"
default-features = false

[dev-dependencies.k8s-openapi]
version = "0.13"
default-features = false
features = ["v1_22"]

[dev-dependencies]
kube-derive = "0.66"
schemars = "0.8"
serde_yaml = "0.8"
chrono = "0.4"
rand = "0.8"
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["fs", "macros", "signal", "rt-multi-thread"] }
opentelemetry-jaeger = "0.11"
tracing-opentelemetry = "0.11"
structopt = "0.3"
compiletest_rs = { version = "0.7", git = "https://github.com/kflansburg/compiletest-rs.git" }

[[example]]
name = "moose"
required-features = ["derive"]
